--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     body {
       max-width: 960px;
-      margin: auto;
+      margin: 20px auto;
       margin-bottom: 100vh;
     }
     .nav ul {
@@ -34,6 +34,10 @@
 </head>
 
 <body>
+
+  <a href="results">View Results</a>
+
+  <br><br>
 
   <ul class="nav">
     <li>
